--- a/tutorials/tutorial_conf.ipynb
+++ b/tutorials/tutorial_conf.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "### Configuration Tutorial\n",
-    "we will show you have to create your own conf from bash"
+    "Below shows how to create configuration file"
    ]
   },
   {
@@ -109,7 +109,8 @@
    "id": "5545383f",
    "metadata": {},
    "source": [
-    "We have a python script named \"gen_conf.py\", which you can customize your own configuration for your dataset. The commands are like the following:\n",
+    "We provided a python script named \"configuration.py\", which you can use to customize configuration for your own dataset. Details of the arguments are shown below:\n",
+    "\n",
     "1. trainroot: a csv file with the (a, p, n) triplets\n",
     "2. testroot: a csv file with the ligand-receptor pairs, we have labels for validation. \n",
     "3. predroot: a csv file to predict the whether a ligand-receptor pair is positive or not. We only have the data, without labels.\n",
@@ -137,17 +138,9 @@
    "source": [
     "a demo usage will be:\n",
     "```\n",
-    "python3 gen_conf.py --ymlname configure_gen.yml\n",
+    "python3 configuration.py --ymlname configure.yml\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5885efca",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -166,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
