--- a/tutorials/tutorial_train.ipynb
+++ b/tutorials/tutorial_train.ipynb
@@ -5,7 +5,7 @@
    "id": "e70bea20",
    "metadata": {},
    "source": [
-    "# SPACI tutorial\n",
+    "# spaCI tutorial\n",
     "\n",
     "## 1. import python modules"
    ]
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yaml_file = 'configure_0.90.yml'\n",
+    "yaml_file = 'configure.yml'\n",
     "with open(yaml_file) as f:\n",
     "    cfg = yaml.load(f, Loader=yaml.FullLoader)"
    ]
@@ -56,7 +56,7 @@
    "id": "84510171",
    "metadata": {},
    "source": [
-    "### 1.2 fix seed"
+    "### 1.2 Fix seed"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "id": "e698392a",
    "metadata": {},
    "source": [
-    "### 2. build dataloader"
+    "### 2. Build dataloader"
    ]
   },
   {
@@ -154,7 +154,7 @@
    "metadata": {},
    "source": [
     "### 2.2 Load spatial graph \n",
-    "we processed the graph in the form of adjacent list, saving in csv files."
+    "Spatial graph is processed in the form of adjacent list, saved in csv files."
    ]
   },
   {
@@ -174,7 +174,7 @@
    "id": "2a052587",
    "metadata": {},
    "source": [
-    "### 3. build model\n",
+    "### 3. Build model\n",
     "We provided an interface in the yaml file for end-users to build up their own model structures.\n",
     "1. Input Dim is the number of genes in your dataset. This is the input of MLP trunk. In this demo, the dimension is 4000\n",
     "2. Graph Dim is the number of genes in your dataset. This is the input of Graph trunk. In this demo, the dimension is 4000\n",
@@ -220,11 +220,10 @@
    "id": "11a77e07",
    "metadata": {},
    "source": [
-    "### train and select best f1\n",
+    "### Training spaCI model\n",
     "### 3.1 inference\n",
-    "we first define the train/inference/prediction of spaci. \n",
-    "1. Infer was used to evaluate the performance of spaci. When \"load_model\" was not assign, or is None, we will use the default parameters in the pre-defined \"model\" object. Otherwise, we will load the saved checkpoint from disk.\n",
-    "2. verbose was used to print the evaluation results. When verbose=True, we will print the performance of current model in validation set."
+    "1. Infer is used to evaluate the performance of spaCI and identify the best model on validation set. When \"load_model\" was not assign, or is None, we will use the default parameters in the pre-defined \"model\" object. Otherwise, we will load the saved checkpoint from disk.\n",
+    "2. verbose is used to print the evaluation results. If verbose=True, the performance of current model in validation set will be print."
    ]
   },
   {
@@ -321,8 +320,8 @@
    "id": "6e2200ee",
    "metadata": {},
    "source": [
-    "### 3.2 train spaci\n",
-    "we evaluate the performance of each epoch, and saved the model with best f1 scores as our final checkpoint."
+    "### 3.2 Train spaCI\n",
+    "We will evaluate the performance of each epoch, and save the model with best F1 as our final checkpoint."
    ]
   },
   {
@@ -364,9 +363,8 @@
    "id": "539e38b5",
    "metadata": {},
    "source": [
-    "### 3.3 show evaluation results\n",
-    "after training spaci, we print the performance of the model.\n",
-    "We will show:\n",
+    "### 3.3 Show evaluation results\n",
+    "After training spaCI, the performance of the final model will be print with metrics as below:\n",
     "1. accuracy\n",
     "2. Precision\n",
     "3. Recall\n",
@@ -401,7 +399,7 @@
     }
    ],
    "source": [
-    "f1 = infer(model, cfg, load_model='best_f1', verbose=True)\n"
+    "f1 = infer(model, cfg, load_model='best_f1', verbose=True)"
    ]
   },
   {
@@ -409,10 +407,9 @@
    "id": "c01b9216",
    "metadata": {},
    "source": [
-    "### 3.4 saved the embeddings and predictions\n",
-    "1. the prediction will be saved in \"results/predict.csv\"\n",
-    "2. The embeddings will be saved in \"results/embed_ligand.csv\" and \"results/embed_receptor.csv\"\n",
-    "3. We set up the threshold as 0.9. Which means, a larger cos-similarity of ligand-receptor pair score (>0.9) will be considered as positive."
+    "### 3.4 Save the embeddings and predictions\n",
+    "1. L-R predictions will be saved in \"results/spaCI_predict.csv\"\n",
+    "2. L-R embeddings will be saved in \"results/embed_ligand.csv\" and \"results/embed_receptor.csv\""
    ]
   },
   {
@@ -514,16 +511,8 @@
     }
    ],
    "source": [
-    "predict(cfg, load_model='best_f1')\n"
+    "predict(cfg, load_model='best_f1')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b1fb88c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -542,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
