--- a/tutorials/tutorial_conf.ipynb
+++ b/tutorials/tutorial_conf.ipynb
@@ -2,11 +2,90 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d2c5b6f4",
+   "id": "6410689e",
    "metadata": {},
    "source": [
     "### Configuration Tutorial\n",
-    "Below shows how to create configuration file"
+    "\n",
+    "The configure.yml look like the following:\n",
+    "You can modify the hyper parameters to meet you own dataset, and build your own model\n",
+    "```\n",
+    "DATASET:\n",
+    "  NAME: TripletData\n",
+    "  TRAIN_ROOT: ../dataset/triplet.csv\n",
+    "  TEST_ROOT: ../dataset/test_pairs.csv\n",
+    "  PRED_ROOT: ../dataset/test_lr_pairs.csv\n",
+    "  MATRIX_ROOT: ../dataset/exp_data_LR.csv\n",
+    "  ADJ_ROOT: ../dataset/spatial_graph.csv\n",
+    "MODEL:\n",
+    "  NAME: TripletGraphModel\n",
+    "  INPUT_DIM: 4000\n",
+    "  GRAPH_DIM: 4000\n",
+    "  MLP_HID_DIMS: [200,50,20]\n",
+    "  GRAPH_HID_DIMS: [200,50,20]\n",
+    "  SAVE_PATH: checkpoint/triplet/\n",
+    "TRAIN:\n",
+    "  LR: 0.000100\n",
+    "  EPOCHS: 10\n",
+    "  SAVE_PATH: checkpoint/triplet/\n",
+    "  BATCH_SIZE: 2048\n",
+    "TEST:\n",
+    "  SAVE_PATH: checkpoint/triplet/best_f1.pth\n",
+    "  BATCH_SIZE: 2048\n",
+    "  PRED: results/predict.csv\n",
+    "  EMB1: results/embed_ligand.csv\n",
+    "  EMB2: results/embed_receptor.csv\n",
+    "  THRESHOLD: 0.500000\n",
+    "SEED: 10\n",
+    "use_cuda: cuda:0\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11f78afe",
+   "metadata": {},
+   "source": [
+    "Sometimes, we want to try different settings, and don't want to modify the configure.yml manually. Therefore, we provide a script for you, which can generate a configure using command lines. This is very useful when we tried to find the best hyper parameter combinations. The tutorial is like the following: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5545383f",
+   "metadata": {},
+   "source": [
+    "We provided a python script named \"configuration.py\", which you can use to customize configuration for your own dataset. Details of the arguments are shown below:\n",
+    "\n",
+    "* --trainroot: a csv file with the (a, p, n) triplets. This is the defined triplet for training.\n",
+    "* --testroot: a csv file with the ligand-receptor pairs, we have labels for validation. This is the defined LR pairs for validation. You need to provide labels in this csv file.\n",
+    "* --predroot: a csv file to predict the whether a ligand-receptor pair is positive or not. We only have the data, without labels. This is the defined LR pairs for prediction. You don't need to provide labels in this csv file.\n",
+    "* --input_dim: the input dimension for mlp trunk, which should be the dimension of gene expressions, unless you want to do some dimension reduction in your own settings.\n",
+    "* --graph_dim: the input dimension for graph trunk, which should be the dimension of gene expression, unless you want to do some dimension reduction in your own settings.\n",
+    "* --mlp_hid_dims: the hidden dimensions of mlp layers, you can customize your own MLP layers, with arbitrary dimensions for arbitrary number of layers.\n",
+    "* --graph_hid_dims: the hidden dimensions of graph layers,  you can customize your own graph layers, with arbitrary dimensions for arbitrary number of layers.\n",
+    "* --lr: the learning rate, this is the learning rate for SGD/Adam optimizer for training.\n",
+    "* --epochs: the total rounds of training\n",
+    "* --save_path: path for check points\n",
+    "* --batch_size: the number of pairs for each batch\n",
+    "* --test_save_path: the selected checkpoint path\n",
+    "* --pred: the path for saving the prediction in the form of csv files.\n",
+    "* --emb1: the path for saving embedings of ligand in the form of csv files.\n",
+    "* --emb2: the path for saving embedings of receptor in the form of csv files.\n",
+    "* --threshold: the threshold to determine whether a L-R pair is positive or not.\n",
+    "* --seed: the fixed seed.\n",
+    "* --ymlname: name of the configuration yaml file.\n",
+    "* --use_cuda: defined whether you want to use gpu or not. You need to give the device id like \"cuda:0\" or \"cpu\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "271226c8",
+   "metadata": {},
+   "source": [
+    "a demo usage will be:\n",
+    "```\n",
+    "python3 configuration.py --ymlname configure.yml\n",
+    "```"
    ]
   },
   {
@@ -52,6 +131,8 @@
     "\n",
     "    # seed\n",
     "    parser.add_argument('--seed', type=int, default=10)\n",
+    "    \n",
+    "    parser.add_argument('--use_cuda', type=str, default='cuda:0')\n",
     "\n",
     "    # yml name\n",
     "    parser.add_argument('--ymlname', type=str, default='configure_gen.yml')\n",
@@ -101,45 +182,8 @@
     "    yml.write('  EMB2: %s\\n'%(opt.emb2))\n",
     "    yml.write('  THRESHOLD: %f\\n'%(opt.threshold))\n",
     "\n",
-    "    yml.write('SEED: %d\\n'%(opt.seed))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5545383f",
-   "metadata": {},
-   "source": [
-    "We provided a python script named \"configuration.py\", which you can use to customize configuration for your own dataset. Details of the arguments are shown below:\n",
-    "\n",
-    "1. trainroot: a csv file with the (a, p, n) triplets\n",
-    "2. testroot: a csv file with the ligand-receptor pairs, we have labels for validation. \n",
-    "3. predroot: a csv file to predict the whether a ligand-receptor pair is positive or not. We only have the data, without labels.\n",
-    "4. input_dim: the input dimension for mlp trunk\n",
-    "5. graph_dim: the input dimension for graph trunk\n",
-    "6. mlp_hid_dims: the hidden dimensions of mlp layers\n",
-    "7. graph_hid_dims: the hidden dimensions of graph layers\n",
-    "8. lr: the learning rate\n",
-    "9. epochs: the total rounds of training\n",
-    "10. save_path: path for check points\n",
-    "11. batch_size: the number of pairs for each batch\n",
-    "12. test_save_path: the selected checkpoint path\n",
-    "13. pred: the path for saving the prediction in the form of csv files.\n",
-    "14. emb1: the path for saving embedings of ligand in the form of csv files.\n",
-    "15. emb2: the path for saving embedings of receptor in the form of csv files.\n",
-    "16. threshold: the threshold to determine whether a L-R pair is positive or not.\n",
-    "17. seed: the fixed seed.\n",
-    "18. ymlname: name of the configuration yaml file.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "271226c8",
-   "metadata": {},
-   "source": [
-    "a demo usage will be:\n",
-    "```\n",
-    "python3 configuration.py --ymlname configure.yml\n",
-    "```"
+    "    yml.write('SEED: %d\\n'%(opt.seed))\n",
+    "    yml.write('use_cuda: %s\\n'%(opt.use_cuda))\n"
    ]
   }
  ],
@@ -159,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
