--- a/tutorials/tutorial_train.ipynb
+++ b/tutorials/tutorial_train.ipynb
@@ -6,15 +6,16 @@
    "metadata": {},
    "source": [
     "# spaCI tutorial\n",
-    "Here we show how to use SpaCI to train, validate and predict the results.\n",
-    "  Before this tutorial, you have already process the data, and put them in the corresponding dirs. Note that you can assign the data path in the configure.yml files.\n",
-    "  Please refer to our preprocessing tutorail [here](https://github.com/tonyyang1995/spaCI/blob/main/README.md). You can find the precessing commands in FAQ.\n",
-    "  In this tutorail, we will show you how to run spaCI step by step:\n",
-    "1. import python modules\n",
-    "2. load configurations\n",
-    "3. fix seed\n",
-    "4. build dataloader\n",
-    "5. build model"
+    "This tutorial shows how to use spaCI to train, validate and predict ligand-receptor interactions.\n",
+    "\n",
+    "  Before this tutorial, the input data are shown in the required structure and the data path is assigned in the configure.yml files. Please refer to our preprocess manual [here](https://github.com/QSong-github/spaCI/blob/main/tutorials/tutorial_preprocess.md) for details.\n",
+    "  \n",
+    "  This tutorail shows how to run spaCI step by step:\n",
+    "1. Import python modules\n",
+    "2. Load configurations\n",
+    "3. Fix seed\n",
+    "4. Build dataloader\n",
+    "5. Train model"
    ]
   },
   {
@@ -22,7 +23,7 @@
    "id": "eb405989",
    "metadata": {},
    "source": [
-    "### 1. import python modules"
+    "### 1. Import python modules"
    ]
   },
   {
@@ -54,16 +55,18 @@
    "id": "cf9c5de5",
    "metadata": {},
    "source": [
-    "### 2 load configurations\n",
-    "In the configure.yml, you will define the model structure, and assign hypter-parameters for training\n",
-    "You can also generate the configure.yml using the following scripts"
+    "### 2. Load configurations\n",
+    "The configure.yml defines the model structure and hypter-parameters for training\n",
+    "You can also manunally change the configure.yml or generate it using the following command:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2f20e341",
-   "metadata": {},
+   "id": "e8a46f04",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -77,7 +80,7 @@
     }
    ],
    "source": [
-    "cmd = 'python ../configuration.py --trainroot ../dataset/triplet.csv --testroot ../dataset/test_pairs.csv --predroot ../dataset/test_lr_pairs.csv --matrixroot ../dataset/exp_data_LR.csv --adjroot ../dataset/spatial_graph.csv --ymlname ../configure.yml --threshold 0.9'\n",
+    "cmd = 'python ../configuration.py --trainroot ../dataset/triplet.csv --testroot ../dataset/test_pairs.csv --predroot ../dataset/test_lr_pairs.csv --matrixroot ../dataset/exp_data_LR.csv --adjroot ../dataset/spatial_graph.csv --ymlname ../configure.yml --threshold 0.5'\n",
     "os.system(cmd)"
    ]
   },
@@ -98,15 +101,15 @@
    "id": "84510171",
    "metadata": {},
    "source": [
-    "### 3 Fix seed\n",
-    "We fix all the seeds to reproducibility.\n",
-    "When we are using GPUs, we need to fix cuda, which is:\n",
+    "### 3. Fix seed\n",
+    "All seeds are fixed for reproducibility.\n",
+    "When using GPUs, it is necessary to fix cuda as follows:\n",
     "```\n",
     "torch.cuda.manual_seed_all(seed)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "torch.backends.cudnn.benchmark = False\n",
     "```\n",
-    "If you are using cpus, you can comment the above mention lines"
+    "When using CPU, you may comment these lines."
    ]
   },
   {
@@ -133,25 +136,24 @@
    "source": [
     "### 4. Build dataloader\n",
     "We set up three different modes (mode=0, 1, 2) when building the dataset\n",
-    "1. mode=1 for training. In training mode\n",
-    "2. mode=0 for evaluate the f1 scores\n",
-    "3. mode=2 for prediction and save the embeddings and predictions\n",
+    "* mode=1: for training step. spaCI is in training mode.\n",
+    "* mode=0: for evaluatation step. Check F1 score on validation set.\n",
+    "* mode=2: for prediction step. Save L-R embeddings and output L-R interaction predictions.\n",
     "\n",
     "Note that the output of training(mode=1) returns:\n",
-    "* (a, p, n) which refers to the triplet anchor, positive and negative pairs\n",
+    "* (a, p, n) which refers to the gene triplet anchor, positive and negative pairs\n",
     "* (aid, pid, nid) are the corresponding index in the csv files\n",
     "\n",
     "The output of evaluation(mode=0) returns:\n",
     "* (x1, x2) which referes to the expression of receptor and ligand\n",
-    "* (y) if the label (positive/negative), which is used in evaluation and calculating the accuracy and F1-scores\n",
+    "* (y) if the label (positive/negative), which is used for evaluation and calculating the accuracy and F1-score\n",
     "* (x1id, x2id) are the corresponding index in the csv files\n",
     "\n",
     "The output of prediction(mode=2) returns:\n",
-    "* (x1, x2) which referes to the expression of receptor and ligand\n",
+    "* (x1, x2) refers to the expression of receptor and ligand\n",
     "* (x1id, x2id) are the corresponding index in the csv files\n",
     "\n",
-    "The difference between prediction mode (mode=2) and evaluation(mode=0) is the existence of labels.\n",
-    "  We assume in prediction, we don't know the labels, so we didn't provide an interface to load the labels."
+    "The difference between prediction mode (mode=2) and evaluation(mode=0) is if ground truth labels exist."
    ]
   },
   {
@@ -212,9 +214,8 @@
    "metadata": {},
    "source": [
     "### 4.1 Load spatial graph \n",
-    "In SpaCI, we pre-compute the graph and saved spatial graph in the form of csv files.\n",
-    "Please refer to the pre-processing manual [here](https://github.com/tonyyang1995/spaCI/blob/main/README.md) if you didn't generate the spatial graph.\n",
-    "  Meanwhile, you can also build your own graph, just make sure using the same format in our settings."
+    "In spaCI, the spatial graph is calculated by cell locations and saved in the format of csv files.\n",
+    "Please refer to the pre-processing manual [here](https://github.com/tonyyang1995/spaCI/blob/main/README.md) to generate spatial graph for your own data."
    ]
   },
   {
@@ -234,18 +235,14 @@
    "id": "2a052587",
    "metadata": {},
    "source": [
-    "### 5. Build model\n",
-    "We provided an interface in the yaml file for end-users to build up their own model structures.\n",
-    "* Input_Dim is the number of genes in your dataset. This is the input of MLP trunk. In this demo, the dimension is 4000\n",
-    "* Graph_Dim is the number of genes in your dataset. This is the input of Graph trunk. In this demo, the dimension is 4000\n",
-    "* Mlp_HID_DIMs is the hidden dimensions of the MLP layers\n",
-    "* Graph_HID_DIMS is the hidden dimensions of the Graph layers\n",
-    "* save_path is the dir of save the checkpoints\n",
-    "\n",
-    "In our early stage of this research, we also explore different models structure, for example: \n",
-    "* TripletModel: which only implement the MLP trunk without graphs\n",
-    "* PairModel: (didn't work), we tried to combine the two pairs (receptor-ligand) using concat style and forward with a MLP trunk. \n",
-    "Please feel free to try these models if you are interested. But we recommand to use our proposed TripletGraphModel to reproduce the results in our paper."
+    "### 5. Train model\n",
+    "The configuration ymal file is provided for users to set model parameters.\n",
+    "* INPUT_DIM: the number of genes in your dataset. This is the input of MLP trunk. In this demo, the dimension is 4000\n",
+    "* GRAPH_DIM: the number of genes in your dataset. This is the input of Graph trunk. In this demo, the dimension is 4000\n",
+    "* MlP_HID_DIMs: the hidden dimensions of MLP layers\n",
+    "* GRAPH_HID_DIMS: the hidden dimensions of graph layers\n",
+    "* SAVE_PATH: the folder path of saved checkpoint\n",
+    "* TripletGraphModel: spaCI model structure"
    ]
   },
   {
@@ -286,7 +283,7 @@
    "id": "11a77e07",
    "metadata": {},
    "source": [
-    "### 5.1 inference\n",
+    "### 5.1 Inference\n",
     "* Infer is used to evaluate the performance of spaCI and identify the best model on validation set. When \"load_model\" was not assign, or is None, we will use the default parameters in the pre-defined \"model\" object. Otherwise, we will load the saved checkpoint from disk.\n",
     "* verbose is used to print the evaluation results. If verbose=True, the performance of current model in validation set will be print.\n",
     "\n",
@@ -395,10 +392,10 @@
    "metadata": {},
    "source": [
     "### 5.2 Train spaCI\n",
-    "This is the code to train SpaCI. Here you can customize your own epochs in the yaml files.\n",
-    "  In this toy demo, epochs=10 or epochs=20 is more than enough.\n",
-    "  We evaluate the model performance in every epoch, and save the model parameters with the best f1 scores.\n",
-    "  Note that we only validate on test set, and those data were not used in training."
+    "Below shows the codes for training spaCI. Here you can customize your own epochs in the yaml files.\n",
+    "  In this toy demo, epochs=10 or epochs=20 is enough.\n",
+    "  We evaluate the model performance in every epoch, and save model parameters with the best f1 scores.\n",
+    "  Note that we only validate on validation set, which is not used in training."
    ]
   },
   {
@@ -484,11 +481,11 @@
    "id": "c01b9216",
    "metadata": {},
    "source": [
-    "### 5.4 Save the embeddings and predictions\n",
-    "In this stage, we predict and save the embeddings from the testing dataset.\n",
-    "  Since the model have been trained, and all the parameters were fixed, you can predict from multiple inputs, and and do some down-stream tasks based on the predictions or embeddings.\n",
+    "### 5.4 Save L-R embeddings and predictions\n",
+    "In this stage, L-R interactions are predictd and saved with their embeddings.\n",
+    "  Since the model have been trained, and all the parameters are fixed, you can predict from multiple inputs, and and do some down-stream tasks based on the predictions or embeddings.\n",
     "  The predictions and embedding will be saved in the following path, and you can customize it from configure.yml.\n",
-    "* L-R predictions will be saved in \"results/spaCI_predict.csv\"\n",
+    "* L-R predictions will be saved in \"results/predict.csv\"\n",
     "* L-R embeddings will be saved in \"results/embed_ligand.csv\" and \"results/embed_receptor.csv\""
    ]
   },
@@ -581,7 +578,7 @@
    "id": "fc463004",
    "metadata": {},
    "source": [
-    "We run prediction functions here. When the predict is completed, we will print \"done\""
+    "The prediction function is shown below. When the prediction is completed, it will print \"done\"."
    ]
   },
   {
@@ -601,14 +598,6 @@
    "source": [
     "predict(cfg, load_model='best_f1')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f12e19ae",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -627,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
