--- a/tutorials/spaCI_manual.ipynb
+++ b/tutorials/spaCI_manual.ipynb
@@ -20,7 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "* python main_yaml.py"
+    "* bash parameter_tuning.sh
+    * python main_yaml.py"
    ]
   },
   {
