--- a/tutorials/spaCI_manual.ipynb
+++ b/tutorials/spaCI_manual.ipynb
@@ -10,7 +10,26 @@
     "### tutorial\n",
     "  To run spaCI, the input data are shown in the required structure and the data path is assigned in the configure.yml files. Please refer to our preprocess manual [here](https://github.com/QSong-github/spaCI/blob/main/tutorials/tutorial_preprocess.md) for details.\n",
     "  \n",
-    "With the data and configuration yaml file, spaCI will output embeddings and predictions in one command line:"
+    "* With the data and configuration yaml file, spaCI provides parameter tuning using one command line:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1430a80b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bash parameter_tuning.sh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2528a194",
+   "metadata": {},
+   "source": [
+    "\n",
+    "* After parameter tuning, spaCI will output embeddings and predictions in one command line:"
    ]
   },
   {
@@ -20,8 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "* bash parameter_tuning.sh
-    * python main_yaml.py"
+    "python main_yaml.py"
    ]
   },
   {
